apps/base/astrbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astrbot
  labels:
    app: astrbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astrbot
  template:
    metadata:
      labels:
        app: astrbot
    spec:
      containers:
        - name: astrbot
          image: soulter/astrbot:v4.27.3@sha256:e51e924d47c5921b9f92afd9c9bb1d459cb5eda33185b494515464f4b051d9bc
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6185
              name: webui
            - containerPort: 6199
              name: qq-ws
            # - containerPort: 6195
            #   name: wecom-wh
            # - containerPort: 6196
            #   name: qq-off-wh
          volumeMounts:
            - name: data
              mountPath: /AstrBot/data
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "50m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: astrbot-data-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
