apps/base/astrbot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astrbot
  labels:
    app: astrbot
spec:
  type: ClusterIP
  selector:
    app: astrbot
  ports:
    - name: http-webui
      port: 6185
    - name: qq-ws
      port: 6199
    #   targetPort: 6199
    #   nodePort: 30199
    # - name: wecom-wh
    #   port: 6195
    #   targetPort: 6195
    #   nodePort: 30195
    # - name: qq-off-wh
    #   port: 6196
    #   targetPort: 6196
    #   nodePort: 30196
